dixatestsystem/message-service/deploy/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    name: message-service
  ports:
    - port: 80
      targetPort: 8080
