dixatestsystem/message-service/deploy/kube/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: message-service
spec:
  host: message-service.default.svc.cluster.local
